# xsfx

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  build.sh
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: configuration-manual.md  development-manual.md  installation-manual.md  rules.md  spec.md  user-manual-en.md  user-manual-es.md  user-manual-fr.md  user-manual-it.md  user-manual-pt.md  user-manual-ua.md
docs/backlog/: TASK-005-parallel-ci.md  TASK-006-open-source-prep.md
docs/specks/: SDD-001-compliance-gaps.md  SDD-002-static-stub.md  SDD-003-stub-minification.md  SDD-004-musl-execveat-fix.md  SDD-006-drop-bcj-filter.md  SDD-007-two-stage-sfx.md
scripts/: xsfx-entrypoint.sh
src/: common.rs  compress.rs  decompress.rs  lib.rs  macho_loader.rs  pe_loader.rs
tests/: integration.rs
