[package]
name = "xsfx"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "A cli packer for executables that acts as UPX and is compatible with .NET assemblies"

[[bin]]
name = "xsfx"
path = "src/bin/packer.rs"

[[bin]]
name = "stub"
path = "src/bin/stub.rs"

[features]
default = ["native-compress"]
# Use native liblzma (statically linked from vendored source) for ultra
# compression during packing. Enabled by default — no system liblzma-dev needed.
native-compress = ["xz2"]

[dependencies]
lzma-rs = "0.3.0"
libc = "0.2.180"

[dependencies.xz2]
version = "0.1.7"
optional = true
features = ["static"]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Better optimization across crates
panic = "abort"        # Removes unwinding code
strip = true           # Removes debug symbols (nightly or Rust 1.76+)
